test/tests/errors/error-cont-non-loc.sm
// true
// false
// false
/**/
/**/

program {
    const x: int = 1;
    var y: int = cont x;
}